[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Bad_Guys/Boss/BG-104-Boss/BG_104_Boss_Cannon_01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bad_Guys/Boss/Boss-104/BG_104_Boss_Cannon.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Projectiles/BadGuy/Proj-BG-104-Cannon_Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Bad_Guys/Boss/Boss-104/BG_104_Boss_Cannon_Hit_Spot.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Shoot"
length = 0.45
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG_104_Boss_Cannon_01:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BG_104_Boss_Cannon_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG_104_Boss_Cannon_02:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cannon_Hit_Spot/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BG_104_Boss_Cannon_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG_104_Boss_Cannon_02:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 18.0278

[node name="BG_104_Boss_Cannon_01" type="Node2D"]
script = ExtResource( 2 )
projectile = ExtResource( 3 )

[node name="BG_104_Boss_Cannon_01" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9
frame = 7

[node name="BG_104_Boss_Cannon_02" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
hframes = 9
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shoot = SubResource( 1 )

[node name="AnimationPlayer_Hit" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )
anims/Hit = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -8, 0 )
rotation = 3.14159

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Cannon_Hit_Spot" type="KinematicBody2D" parent="." groups=["badguy", "hittable"]]
collision_layer = 512
collision_mask = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cannon_Hit_Spot"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
